Bump dependency minor/patch versions